change type of the Node.js project to a ES6 module

--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   "bugs": {
     "url": "https://github.com/nhamonin/nodejs-udemy/issues"
   },
+  "type": "module",
   "homepage": "https://github.com/nhamonin/nodejs-udemy#readme"
 }
