--- a/package.json
+++ b/package.json
@@ -1,27 +1,24 @@
 {
-  "name": "nodejs-udemy",
+  "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "Repository for my NodeJs learning from Udemy",
+  "description": "Complete Node.js Guide",
   "main": "app.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nhamonin/nodejs-udemy.git"
+    "start-server": "node app.js"
   },
   "author": "nhamonin",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nhamonin/nodejs-udemy/issues"
+  "devDependencies": {
+    "nodemon": "^1.18.3"
   },
   "type": "module",
-  "homepage": "https://github.com/nhamonin/nodejs-udemy#readme",
-  "devDependencies": {
-    "nodemon": "^2.0.19"
-  },
   "dependencies": {
-    "express": "^4.18.1"
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "pug": "^2.0.3"
   }
 }
