--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "nhamonin",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.3",
+    "prettier": "^2.8.8"
   },
   "type": "module",
   "dependencies": {
