--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "mysql2": "^3.2.4",
     "pug": "^3.0.2"
   }
 }
