--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mysql2": "^3.2.4",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "sequelize": "^6.31.1"
   }
 }
