--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongodb": "^5.3.0",
+    "mongoose": "^7.1.0",
     "pug": "^3.0.2"
   }
 }
