--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-mongodb-session": "^3.1.1",
     "express": "^4.16.3",
+    "express-session": "^1.17.3",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "pug": "^3.0.2"
