--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "^2.8.8"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-mongodb-session": "^3.1.1",
     "express": "^4.16.3",
