--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "csurf": "^1.11.0",
+    "dotenv": "^16.0.3",
     "express": "^4.16.3",
     "express-session": "^1.17.3",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
+    "nodemailer": "^6.9.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^3.0.2"
   }
 }
