--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.16.3",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "mongodb": "^5.3.0",
     "mongoose": "^7.1.0",
     "nodemailer": "^6.9.1",
