--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^6.9.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.13.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "stripe": "^12.4.0"
   }
 }
